--- a/src/Bolao.Infra/Bolao.Infra.csproj
+++ b/src/Bolao.Infra/Bolao.Infra.csproj
@@ -20,4 +20,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\Bolao.Core\Bolao.Core.csproj" />
+  </ItemGroup>
+
 </Project>
