--- a/src/Bolao.Security/Bolao.Security.csproj
+++ b/src/Bolao.Security/Bolao.Security.csproj
@@ -29,4 +29,8 @@
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.24.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\Bolao.Core\Bolao.Core.csproj" />
+  </ItemGroup>
+
 </Project>
